--- a/style.css
+++ b/style.css
@@ -19,28 +19,29 @@ body {
 }
 main {
     background: var(--White);
-    height: 800px;
-    width: 600px;
-    border-radius: 30px;
+    height: 600px;
+    width: 400px;
+    border-radius: 25px;
     text-align: start;
-    box-shadow: 10px 8px;
-    border: solid black 2px;
+    box-shadow: 7px 5px;
+    border: solid black 1px;
 }
 figure img {
     width: 100%;
     border-radius: 10px;
 }
 .main-container {
-    height: 750px;
-    width: 560px;
-    margin: 30px 20px 30px 20px;
+    height: 90%;
+    width: 90%;
+    margin: 20px;
+
 }
 h3 {
 background-color: var(--Yellow);
-width: 20%;
-height: 5%;
+width: 25%;
+height: 6%;
 margin: 20px 30px 10px 0;
-padding-top: 9px;
+padding-top: 5px;
 text-align: center;
 border-radius: 5px;
 color: var(--Black);
@@ -58,7 +59,7 @@ h4:hover {
 }
 article {
     color: var(--Grey);
-    margin: 30px 0 60px 0;
+    margin: 30px 0 40px 0;
     font-size: 16px;
 }
 footer {
@@ -66,10 +67,10 @@ footer {
     align-items: center;
 }
 footer img {
-    width: 50px;
+    width: 40px;
     height: auto;
 }
 footer span {
-    margin-left: 15px;
+    margin-left: 10px;
     font-weight: 800;
 }
